1.26/04-argocd/02-service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server-np
    app.kubernetes.io/part-of: argocd
  name: argocd-server-np
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 31180
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
    nodePort: 31181
  selector:
    app.kubernetes.io/name: argocd-server
