1.26/04-argocd/03-service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server-lb
    app.kubernetes.io/part-of: argocd
  name: argocd-server-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.218.181
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
